docs/api/qiskit/1.2/qiskit.qobj.PulseQobjConfig.mdx
---
title: PulseQobjConfig (v1.2)
description: API reference for qiskit.qobj.PulseQobjConfig in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobjConfig
---

# PulseQobjConfig

<Class id="qiskit.qobj.PulseQobjConfig" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L299-L401" signature="qiskit.qobj.PulseQobjConfig(meas_level, meas_return, pulse_library, qubit_lo_freq, meas_lo_freq, memory_slot_size=None, rep_time=None, rep_delay=None, shots=None, seed_simulator=None, memory_slots=None, **kwargs)" modifiers="class">
  Bases: `QobjDictField`

  A configuration for a Pulse Qobj.

  Instantiate a PulseQobjConfig object.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.pulse_qobj.PulseQobjConfig` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **meas\_level** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The measurement level to use.
  *   **meas\_return** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The level of measurement information to return.
  *   **pulse\_library** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – A list of [`PulseLibraryItem`](qiskit.qobj.PulseLibraryItem "qiskit.qobj.PulseLibraryItem") objects which define the set of primitive pulses
  *   **qubit\_lo\_freq** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – List of frequencies (as floats) for the qubit driver LO’s in GHz.
  *   **meas\_lo\_freq** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – List of frequencies (as floats) for the’ measurement driver LO’s in GHz.
  *   **memory\_slot\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Size of each memory slot if the output is Level 0.
  *   **rep\_time** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Time per program execution in sec. Must be from the list provided by the backend (`backend.configuration().rep_times`). Defaults to the first entry in `backend.configuration().rep_times`.
  *   **rep\_delay** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – Delay between programs in sec. Only supported on certain backends (`backend.configuration().dynamic_reprate_enabled` ). If supported, `rep_delay` will be used instead of `rep_time` and must be from the range supplied by the backend (`backend.configuration().rep_delay_range`). Default is `backend.configuration().default_rep_delay`.
  *   **shots** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of shots
  *   **seed\_simulator** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – the seed to use in the simulator
  *   **memory\_slots** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – The number of memory slots on the device
  *   **kwargs** – Additional free form key value fields to add to the configuration

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobjConfig.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L387-L401" signature="from_dict(data)" modifiers="classmethod">
    Create a new PulseQobjConfig object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary for the config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [PulseQobjConfig](#qiskit.qobj.PulseQobjConfig "qiskit.qobj.PulseQobjConfig")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobjConfig.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L375-L385" signature="to_dict()">
    Return a dictionary format representation of the Pulse Qobj config.

    **Returns**

    The dictionary form of the PulseQobjConfig.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

